# TianshanOS

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  README_EN.md  partitions.csv  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: adler32.c.6E4B9F41A4737C00.idx  compress.c.BD02D27C42353106.idx  crc32.c.2569757124DB236C.idx  crc32.h.B9760ACA3F3927CF.idx  deflate.c.988D6DD56F8F70F6.idx  deflate.h.FFE22F9606765ED5.idx  example.c.7979E36D99F8E0D4.idx  gzclose.c.264AF05A6A6F0113.idx  gzguts.h.553F8CAB9622A37D.idx  gzlib.c.A4F7FFB6DE0C289A.idx  gzread.c.CFC518A9A6447539.idx  gzwrite.c.61E438C25231CFBD.idx  infback.c.5E88CF1DACA8770A.idx  inffast.c.475A3DC90CB4B49B.idx  inffast.h.E841D8366B2DABD4.idx  inffixed.h.850C0FEA8E146C89.idx  inflate.c.47E78D6EF05211CA.idx  inflate.h.D456160FD8C11524.idx  inftrees.c.CE5313B764600D79.idx  inftrees.h.A929DFFDB40BC6DF.idx  jpeg_decoder.c.C079AD0E295E62C0.idx  jpeg_decoder.h.74D2F2023FE9AE35.idx  led_strip.h.70554C3B44045FF7.idx  led_strip_api.c.2B95CB2D480136DA.idx  led_strip_interface.h.861E5188BF5C9679.idx  led_strip_rmt.h.3B4BCC3C331C5C7B.idx  led_strip_rmt_dev.c.628E126A5ECDC7FD.idx  led_strip_rmt_encoder.c.514FC874C3CB9236.idx  led_strip_rmt_encoder.h.FA9CC33533866531.idx  led_strip_spi.h.71F9304ECA93129F.idx  led_strip_spi_dev.c.B1AECB815FD05259.idx  led_strip_types.h.028BDD87D5C4DCE3.idx  main.c.6FA83AC9E7263F77.idx  png.c.6E14586E740C7AE0.idx  png.h.241FB7B4B81EF7B0.idx  pngconf.h.96712BC768423A83.idx  pngdebug.h.FEE76C7C5C2A61FE.idx  pngerror.c.E2860C21AD9BD804.idx  pngget.c.49B24CC39A561FFD.idx  pnginfo.h.BCAF32CF009EE7A3.idx  (+114 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml
assets/: system-architecture.mmd
boards/rm01_esp32s3/: board.json  devices.json  pins.json  services.json
components/ts_api/: CMakeLists.txt  Kconfig
components/ts_api/assets/: lpmu-agx-network-setup.manifest
components/ts_api/include/: ts_api.h
components/ts_api/src/: ts_api.c  ts_api_auth.c  ts_api_automation.c  ts_api_cert.c  ts_api_config.c  ts_api_config.c.bak  ts_api_config_pack.c  ts_api_device.c  ts_api_fan.c  ts_api_gpio.c  ts_api_hosts.c  ts_api_https.c.bak  ts_api_key.c  ts_api_led.c  ts_api_lpmu_access.c  ts_api_monitor.c  ts_api_network.c  ts_api_ota.c  ts_api_service.c  ts_api_ssh.c  ts_api_storage.c  ts_api_system.c  ts_api_temp.c  ts_api_time.c  ts_api_ui.c
components/ts_automation/: CMakeLists.txt  Kconfig
components/ts_automation/include/: ts_action_manager.h  ts_automation.h  ts_automation_types.h  ts_rule_engine.h  ts_source_manager.h  ts_variable.h
components/ts_automation/src/: ts_action_manager.c  ts_automation.c  ts_rule_engine.c  ts_source_manager.c  ts_variable.c
components/ts_cert/: CMakeLists.txt
components/ts_cert/include/: ts_cert.h
components/ts_cert/src/: ts_cert.c
components/ts_config_pack/include/: ts_config_pack.h
components/ts_config_pack/src/: ts_config_pack.c
components/ts_console/: CMakeLists.txt  Kconfig
components/ts_console/commands/: ts_cmd_agx.c  ts_cmd_compute.c  ts_cmd_config.c  ts_cmd_fan.c  ts_cmd_gpio.c  ts_cmd_hosts.c  ts_cmd_key.c  ts_cmd_led.c  ts_cmd_monitor.c  ts_cmd_register.c  (+7 more)
components/ts_core/: CMakeLists.txt
components/ts_core/ts_event/: CMakeLists.txt  Kconfig
components/ts_core/ts_event/include/: ts_event.h
components/ts_core/ts_event/src/: ts_event.c
components/ts_core/ts_log/: CMakeLists.txt  Kconfig
components/ts_core/ts_log/include/: ts_log.h
components/ts_core/ts_log/src/: ts_log.c
components/ts_core/ts_service/: CMakeLists.txt  Kconfig
components/ts_core/ts_service/include/: ts_service.h
components/ts_core/ts_service/src/: ts_service.c
components/ts_drivers/: CMakeLists.txt  Kconfig
components/ts_drivers/include/: ts_agx_monitor.h  ts_compute_monitor.h  ts_device_ctrl.h  ts_drivers.h  ts_fan.h  ts_power.h  ts_temp_source.h  ts_usb_mux.h
components/ts_drivers/src/: ts_agx_monitor.c  ts_compute_monitor.c  ts_device_ctrl.c  ts_drivers.c  ts_fan.c  ts_power.c  ts_power_policy.c  ts_temp_source.c  ts_usb_mux.c
components/ts_hal/: CMakeLists.txt  Kconfig
components/ts_https/: CMakeLists.txt  Kconfig
components/ts_https/include/: ts_https.h  ts_https_api.h
components/ts_https/src/: ts_https.c  ts_https_api.c  ts_https_auth.c  ts_https_internal.h
components/ts_jsonpath/: CMakeLists.txt
components/ts_led/: CMakeLists.txt  Kconfig  idf_component.yml
components/ts_net/: CMakeLists.txt  Kconfig
components/ts_ota/: CMakeLists.txt
components/ts_pki_client/: CMakeLists.txt
components/ts_security/: CMakeLists.txt  Kconfig
components/ts_storage/: CMakeLists.txt  Kconfig
components/ts_webui/: CMakeLists.txt  Kconfig
components/ts_webui/include/: ts_webui.h  ts_ws_subscriptions.h
components/ts_webui/src/: ts_webui.c  ts_webui_api.c  ts_webui_ws.c  ts_ws_subscriptions.c
components/ts_webui/web/: index.html
components/ts_webui/web/css/: style.css
components/ts_webui/web/fonts/: remixicon.css
components/ts_webui/web/js/: api.js  app.js  router.js  terminal.js
components/ts_webui/web/js/lang/: en-US.js  zh-CN.js
docs/: API_REFERENCE.md  ARCHITECTURE_DESIGN.md  AUTOMATION_ENGINE.md  BOARD_CONFIGURATION.md  COMMANDS.md  COMMAND_REFERENCE.md  COMMAND_SPECIFICATION.md  CONFIGURATION_GUIDE.md  DEBUG_SSH_NOHUP.md  DEVELOPMENT_PROGRESS.md  DOCUMENTATION_CONSOLIDATION.md  FLASH_VIA_SERIAL.md  GPIO_MAPPING.md  LED_ARCHITECTURE.md  MEMORY_CRISIS_SOLUTION.md  MEMORY_OPTIMIZATION.md  MEMORY_STATUS.md  PHASE15_WEBSOCKET_CPU.md  PKI_DESIGN.md  PROJECT_DESCRIPTION.md  PSRAM_MIGRATION_CANDIDATES.md  QUICK_START.md  README.md  REFACTORING_ANALYSIS.md  SECURITY_ENHANCEMENT_PLAN.md  SECURITY_IMPLEMENTATION.md  TEST_PLAN.md  TROUBLESHOOTING.md  WEBSOCKET_MIGRATION.md
main/: CMakeLists.txt  idf_component.yml  main.c  ts_core_init.c  ts_services.c
sdcard/fonts/: boutique9x9.fnt  cjk.fnt  noto12.fnt  pixel9x9.bdf  pixel9x9.fnt
tools/: bdf2fnt.py  build.sh  gen_version.py  minify_web.py  ttf2fnt.py
tools/ota_server/: README.md  ota_server.py  ota_service.sh  requirements.txt  start.sh  tianshan-ota.service
(+115 files in other folders)
